--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/users?serverTime
 spring.datasource.username=root
 spring.datasource.password=5516701
 spring.jpa.hibernate.ddl-auto=update
+SECRET_KEY=abodeh
