--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=5516701
 spring.jpa.hibernate.ddl-auto=update
 SECRET_KEY=abodeh
+hibernate.dialect=org.hibernate.dialect.H2Dialect
